# yerevan.rs

./: Cargo.toml  README.md  yerevan_ascii.txt
src/: lib.rs  tests.rs  yer_macro.rs
tests/: common.rs
